--- a/WIZ550io_FTPServer_UsingSDCard/.project
+++ b/WIZ550io_FTPServer_UsingSDCard/.project
@@ -32,6 +32,11 @@
 			<locationURI>ArduinoLibPath/Ethernet</locationURI>
 		</link>
 		<link>
+			<name>Libraries/SD</name>
+			<type>2</type>
+			<locationURI>ArduinoLibPath/SD</locationURI>
+		</link>
+		<link>
 			<name>Libraries/SPI</name>
 			<type>2</type>
 			<locationURI>ArduinoHardwareLibPath/SPI</locationURI>
